# chip-8-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
fonts/: custom.font
notes/: sdl2-library.md
programs/: welcome.ch8
src/: chip8.rs  config.rs  cpu.rs  keypad.rs  main.rs  screen.rs  screen_ui.rs  stack.rs
