[package]
name = "chip-8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# used for generating random numbers
rand = "0.7.3"

# used for serializing and deserializing the config
serde = { version = "1", features = ["derive"] }

# used for loading and storing the config file
confy = "0.4.0"

# used for GUI
[dependencies.sdl2]
version = "0.35"
default-features = true